# business-strategy-crew

./: .gitignore  README.md  pyproject.toml  report.md
business_strategy/: crew.py  main.py
business_strategy/config/: agents.yaml  tasks.yaml
db/: chroma.sqlite3
src/business_strategy/: crew.py  main.py
startup_idea_validation/: crew.py  main.py
startup_idea_validation/config/: agents.yaml  tasks.yaml
