[project]
name = "business_strategy"
version = "0.1.0"
description = "business_strategy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
business_strategy = "business_strategy.main:run"
run_crew = "business_strategy.main:run"
train = "business_strategy.main:train"
replay = "business_strategy.main:replay"
test = "business_strategy.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
